# rust-admin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
admin-api/: Cargo.toml  README.md
admin-api/config/: default.toml  dev.toml  pg.toml  prod.toml
admin-api/scripts/regression/: README.md  permission_api.sh
admin-api/src/: lib.rs  main.rs
admin-api/src/app/: container.rs  mod.rs
admin-api/src/app/bootstrap/: mod.rs
admin-api/src/app/routes/: mod.rs
admin-api/src/app/state/: mod.rs  repository_factory.rs
admin-api/src/core/: mod.rs
admin-api/src/core/common/: auth.rs  mod.rs
admin-api/src/core/config/: mod.rs
admin-api/src/core/converter/: auth.rs  auth_converter.rs  dashboard.rs  dashboard_converter.rs  mod.rs  sys_config_converter.rs  sys_dept_converter.rs  sys_dict_converter.rs  sys_menu_converter.rs  sys_post_converter.rs  sys_role_converter.rs  sys_user_converter.rs
admin-api/src/core/db/: mod.rs
admin-api/src/core/dbal/: dialect.rs  error.rs  mod.rs
admin-api/src/core/dto/: ai.rs  auth_dto.rs  log_dto.rs  mod.rs  monitor.rs  monitor_dto.rs  sys_config_dto.rs  sys_dept_dto.rs  sys_dict_dto.rs  sys_menu_dto.rs  sys_notice_dto.rs  sys_post_dto.rs  sys_role_dto.rs  sys_user_dto.rs  system.rs  system_dto.rs
admin-api/src/core/enums/: mod.rs
admin-api/src/core/errors/: mod.rs
admin-api/src/core/logging/: mod.rs
admin-api/src/core/macros/: mod.rs
admin-api/src/core/model/: ai.rs  auth.rs  dashboard.rs  log.rs  mod.rs  monitor.rs  sys_config.rs  sys_dept.rs  sys_dict.rs  sys_menu.rs  sys_notice.rs  sys_post.rs  sys_role.rs  sys_user.rs  system.rs
admin-api/src/core/pagination/: mod.rs
admin-api/src/core/redis/: mod.rs
admin-api/src/core/response/: mod.rs
admin-api/src/core/utils/: ip_util.rs  mod.rs
admin-api/src/core/vo/: ai_vo.rs  auth_vo.rs  dashboard.rs  log_vo.rs  mod.rs  monitor.rs  monitor_vo.rs  sys_config_vo.rs  sys_dept_vo.rs  sys_dict_vo.rs  sys_menu_vo.rs  sys_post_vo.rs  sys_role_vo.rs  sys_user_vo.rs  system_vo.rs
admin-api/src/middleware/: auth.rs  request_log.rs
admin-api/src/modules/: mod.rs
admin-api/src/modules/log/: mod.rs
(+163 files in other folders)
