[package]
name = "admin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8"
bcrypt = "0.15"
config = "0.15"
dotenvy = "0.15"
jsonwebtoken = "9.3"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
